@@ -35,6 +35,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Add a predictable default ordering of the "Object/Other permissions" in the Group Editing view, allow this [ordering to be customised](customising_group_views_permissions_order) (Daniel Kirkham)
  * Implement a new design for chooser buttons with better accessibility (Thibaud Colas)
  * Add [`AbstractImage.get_renditions()`](image_renditions_multiple) for efficient generation of multiple renditions (Andy Babic)
+ * Optimise queries in collection permission policies using cache on the user object (Sage Abdullah)
 
 ### Bug fixes
 
